--- a/style.css
+++ b/style.css
@@ -60,16 +60,22 @@ a{
     height: 200px;
 }
 .produits{
-    background-color: var(--couleurbl);
+    
     margin: auto 5px;
     width: 20%;
     height: 100%;
 }
 .pro{
-    background-color: var(--couleurbl);
     width: 33%;
     height: 100%;
     margin: auto 5px;
+}
+.pro img{
+    width: 100%;
+    height: 70%;
+}
+.pro h1{
+    text-align: center; 
 }
 .n7{
     background-color: rgba(0, 0, 0, 0.5);
@@ -80,3 +86,5 @@ a{
     color: white;
     text-align: center;
 }
+
+
