--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*
+{
+    padding: 0;
+    margin: 0;
+}
 :root{
     --couleurbl: #84b067;
 }
@@ -7,17 +12,20 @@ body{
 .n1{
     background-color: #84b067;
     width: 100%;
-    height: 10%;
-    margin: 5px 10px;
+    height: 70px;
+    top: 0%;
     display: flex;
-    gap: 1200px;
+    gap: 450px;
+    padding-top: 25px;
+}
+.n1, nav, #monPanier{
+    display: flex;
 }
 .n1 h1{
     margin-left: 15px;
     font-size: 30px;
-}
-nav{
-    float: right;
+    color: white;
+    font-weight: bold;
 }
 .n1 nav ul li{
     display: inline-block;
@@ -27,6 +35,23 @@ a{
     text-decoration: none;
     font-size: 30px;
     color: blue;
+}
+#monPanier{
+    position: relative;
+    display: flex;
+}
+#leslistes{
+      display: none;
+      position: absolute;
+      z-index: 2;
+      background-color: white;
+      border-radius: 5px;
+      margin-top: 30px;
+      padding: 10px;
+      min-width: 200px;
+}
+ #monPanier:hover #leslistes{
+  display: block;
 }
 .n2{
     height: 600px;
@@ -118,7 +143,7 @@ input{
     margin: 10px 35px;
     line-height: 1.6;
 }
-span{
+p span{
     font-size: 30px;
     color: blue;
     font-weight: bold;
@@ -176,7 +201,7 @@ span{
     width: 100%;
     height: 130px;
 }
-  .bloc-n3 {
+.bloc-n3 {
     flex: 1;
     background-color: white;
     padding: 20px;
@@ -184,19 +209,19 @@ span{
     text-align: center;
     min-width: 280px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  }
+}
   
-  .bloc-n3 h2 {
+.bloc-n3 h2 {
     color: #1505f8;
     margin-bottom: 10px;
     font-size: 22px;
-  }
+}
   
-  .bloc-n3 p {
+.bloc-n3 p {
     color: #080808;
     font-size: 15px;
     line-height: 1.6;
-  }
+}
 .pro{
     border: 1px solid #84b067;
     width: 33%;
@@ -218,9 +243,4 @@ span{
 .foot{
     color: white;
     text-align: center;
-}
-
-#quantite:hover{
-    display: contents;
-    background-color: #080808;
 }
